--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 		<div>
 			<label for="cars">Car Brands</label>
 			<select name="laptop" id="cars">
+				<option value="SELECT">--SELECT--</option>
 				<option value="BMW">BMW</option>
 				<option value="Audi">Audi</option>
 				<option value="Mercedez">Mercedez</option>
@@ -40,7 +41,7 @@
 		</div><br>
 	    <div>
 			<label for="age">Age*</label><br>
-			<input type="number" id="age" placeholder="Enter the age of your car" required>
+			<input type="number" id="age" placeholder="Enter your age" required>
 		<div><br>
 			<label for="dob">DOB*</label>
 			<input type="date" id="dob" required>
